--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     <div class="container">
 
-    <embed src="/Rag'n'Bone Man - Human (Official Video).m4a" width="0" height="0" type="" autostart="true" loop="true">
+    <embed type="audio/ogg" src="/Rag'n'Bone Man - Human (Official Video).m4a" width="0" height="0" autostart="true" loop="true">
         <div class="logo">
             <img src="logoWhite.svg" alt="">
         </div>
     
         <div class="video">
-            <video src="/videoMarketing.mp4" autoplay="true" loop="true"></video>
+            <video controls src="/videoMarketing.mp4" autoplay="true" loop="true"></video>
         </div>
 
         <div class="descricao">
